--- a/SlnAngular/AngularApp/src/app/Employee/employeeList.component.html
+++ b/SlnAngular/AngularApp/src/app/Employee/employeeList.component.html
@@ -52,5 +52,11 @@
             </tbody>
         </table>
     </div>
+    <div>
+        <br /><br />
+        Your Text: <input type="text" [(ngModel)]="simpeText" />
+        <br /><br />
+       <simple [simpleInput] = simpeText></simple>
+    </div>
 </body>
 </html>
